[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://SideGUI.gd" type="Script" id=2]
[ext_resource path="res://fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://tilesets/tiles.tres" type="TileSet" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="SideGUI" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="SideMargin" type="VBoxContainer" parent="."]
margin_right = 117.0
margin_bottom = 315.0

[node name="NextPieces" type="VBoxContainer" parent="SideMargin"]
margin_right = 117.0
margin_bottom = 150.0
rect_min_size = Vector2( 75, 150 )
theme = ExtResource( 1 )

[node name="NextLabel" type="Label" parent="SideMargin/NextPieces"]
margin_right = 117.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Next Pieces"
align = 1

[node name="NextTiles" type="TileMap" parent="SideMargin/NextPieces"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Superposition" type="VBoxContainer" parent="SideMargin"]
margin_top = 154.0
margin_right = 117.0
margin_bottom = 315.0

[node name="SuperLabel" type="Label" parent="SideMargin/Superposition"]
margin_right = 117.0
margin_bottom = 19.0
text = "Superposition"
align = 1

[node name="PieceAndProb" type="VBoxContainer" parent="SideMargin/Superposition"]
margin_top = 23.0
margin_right = 117.0
margin_bottom = 161.0

[node name="Piece1" type="VBoxContainer" parent="SideMargin/Superposition/PieceAndProb"]
margin_right = 117.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="Prob1" type="Label" parent="SideMargin/Superposition/PieceAndProb/Piece1"]
margin_right = 117.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 115 )
align = 1

[node name="Sprite1" type="TileMap" parent="SideMargin/Superposition/PieceAndProb/Piece1"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Piece2" type="VBoxContainer" parent="SideMargin/Superposition/PieceAndProb"]
margin_top = 119.0
margin_right = 117.0
margin_bottom = 138.0
size_flags_horizontal = 3

[node name="Prob2" type="Label" parent="SideMargin/Superposition/PieceAndProb/Piece2"]
margin_right = 117.0
margin_bottom = 19.0
align = 1

[node name="Sprite2" type="TileMap" parent="SideMargin/Superposition/PieceAndProb/Piece2"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
